# hello-world

./: .gitignore  CMakeLists.txt  README.md  fix_dup.py  fix_vk.py  generate_assets.py  generate_texture.py  patch_client.py  patch_server.py  patch_server2.py  test_rp3d.cpp  vcpkg.json
engine/: CMakeLists.txt
engine/core/: Application.cpp  Application.h  Macros.h  Types.h
engine/ecs/: Components.h  World.cpp  World.h
engine/network/: NetworkManager.cpp  NetworkManager.h  Packet.h
engine/render/: AssetLoader.cpp  AssetLoader.h  Mesh.h  RHI.h  Texture.h  VulkanBackend.cpp  VulkanBackend.h
engine/render/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
game/: CMakeLists.txt  main.cpp
server/microservices/: go.mod
server/microservices/gateway/: main.go
server/microservices/login_service/: main.go
server/world/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
